Bug #38897
src/osd/OSDMap.cc: 4405: FAILED assert(osd_weight.count(i.first))
% Done:
0%
Description
@ 0> 2019-03-22 14:49:46.555120 7f2314e28700 -1 /clove/vm/zstor/ceph/rpmbuild/BUILD/ceph-12.2.9/src/osd/OSDMap.cc: In function 'int OSDMap::calc_pg_upmaps(CephConte
xt*, float, int, const std::set<long int>&, OSDMap::Incremental*)' thread 7f2314e28700 time 2019-03-22 14:49:46.553252
/clove/vm/zstor/ceph/rpmbuild/BUILD/ceph-12.2.9/src/osd/OSDMap.cc: 4405: FAILED assert(osd_weight.count(i.first))
ceph version 12.2.9-1-258-gb7ce800 (b7ce80044667c89bb001367cb4eb1144c6d111a8) luminous (stable)
1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0x55e4d083f380]
2: (OSDMap::calc_pg_upmaps(CephContext*, float, int, std::set<long, std::less<long>, std::allocator<long> > const&, OSDMap::Incremental*)+0x37de) [0x55e4d093fabe]
3: (()+0x2fd265) [0x55e4d06d4265]
4: (PyEval_EvalFrameEx()+0x6df0) [0x7f233a8e3bb0]
5: (PyEval_EvalCodeEx()+0x7ed) [0x7f233a8e5efd]
6: (PyEval_EvalFrameEx()+0x663c) [0x7f233a8e33fc]
7: (PyEval_EvalFrameEx()+0x67bd) [0x7f233a8e357d]
8: (PyEval_EvalCodeEx()+0x7ed) [0x7f233a8e5efd]
9: (PyEval_EvalFrameEx()+0x663c) [0x7f233a8e33fc]
10: (PyEval_EvalCodeEx()+0x7ed) [0x7f233a8e5efd]
11: (()+0x70858) [0x7f233a86f858]
12: (PyObject_Call()+0x43) [0x7f233a84a9a3]
13: (()+0x5a995) [0x7f233a859995]
14: (PyObject_Call()+0x43) [0x7f233a84a9a3]
15: (()+0x4ba85) [0x7f233a84aa85]
16: (PyObject_CallMethod()+0xbb) [0x7f233a84adbb]
17: (PyModuleRunner::serve()+0x5c) [0x55e4d06d129c]
18: (PyModuleRunner::PyModuleRunnerThread::entry()+0x6e) [0x55e4d06d1b2e]
19: (()+0x7e25) [0x7f2338af7e25]
20: (clone()+0x6d) [0x7f2337decbcd]
NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.@
Related issues
History
#1 Updated by xie xingguo about 2 years ago
- Pull request ID set to 27142
#2 Updated by xie xingguo about 2 years ago
- Status changed from New to Fix Under Review
#3 Updated by Sage Weil about 2 years ago
- Status changed from Fix Under Review to Pending Backport
- Backport set to nautilus, mimic, luminous
#4 Updated by Nathan Cutler about 2 years ago
- Copied to Backport #38965: luminous: src/osd/OSDMap.cc: 4405: FAILED assert(osd_weight.count(i.first)) added
#5 Updated by Nathan Cutler about 2 years ago
- Copied to Backport #38966: mimic: src/osd/OSDMap.cc: 4405: FAILED assert(osd_weight.count(i.first)) added
#6 Updated by Nathan Cutler about 2 years ago
- Copied to Backport #38967: nautilus: src/osd/OSDMap.cc: 4405: FAILED assert(osd_weight.count(i.first)) added
#7 Updated by Nathan Cutler almost 2 years ago
- Status changed from Pending Backport to Resolved